--- a/appspec.yml
+++ b/appspec.yml
@@ -3,4 +3,6 @@ os: linux
 files:
   - source: index.html
     destination: /var/www/html/
-    fileExistsBehavior: OVERWRITE
+#     fileExistsBehavior: OVERWRITE
+file_exists_behavior: OVERWRITE
+
