--- a/appspec.yml
+++ b/appspec.yml
@@ -3,6 +3,9 @@ os: linux
 files:
   - source: index.html
     destination: /var/www/html/
-#     fileExistsBehavior: OVERWRITE
 file_exists_behavior: OVERWRITE
+hooks:
+  ApplicationStart:
+    - location: run_apache.sh
+      timeout: 3600
 
